<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#ffffff"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp"
        android:gravity="center">

        <!--Correo-->
        <EditText
            android:id="@+id/correoEt"

            android:hint="@string/correoEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no">

        </EditText>

        <!--Contraseña-->
        <EditText
            android:id="@+id/passEt"
            android:hint="@string/passEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:importantForAutofill="no">

        </EditText>
        <!--Nombre-->
        <EditText
            android:id="@+id/nombreEt"
            android:hint="@string/nombreEt"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no">

        </EditText>

        <!--Fecha-->
        <TextView
            android:id="@+id/fechaTxt"
            android:text="@string/fechaTxt"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">

        </TextView>
        <!--Boton para registrarse-->
        <Button
            android:id="@+id/Registrar"
            android:text="@string/Registrar"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Button>

    </androidx.appcompat.widget.LinearLayoutCompat>
    
</RelativeLayout>