<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/fondo"
    android:layout_height="match_parent"
    tools:context=".Juego">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:orientation="vertical"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:orientation="vertical" />

            <TextView
                android:id="@+id/AnchoTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AnchoTv" />

            <TextView
                android:id="@+id/AltoTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AltoTv" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/pistolaagua"/>



            <TextView
                android:id="@+id/TvContador"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/TvContador"
                android:textColor="#ffffff"
                android:textSize="20sp">

            </TextView>

            <TextView
                android:id="@+id/TvNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TvNombre"
                android:textColor="#ffffff"
                android:textSize="20sp">

            </TextView>

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="15dp"
                app:lottie_autoPlay="true"
                app:lottie_fileName="tiempo.json"
                app:lottie_imageAssetsFolder=""
                app:lottie_loop="true"/>

            <TextView
                android:id="@+id/TvTiempo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TvTiempo"
                android:textColor="#ffffff"
                android:textSize="20sp">

            </TextView>
        </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/TvPato"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="400sp"
            android:src="@drawable/elduko" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/TvPato2"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="400sp"
            android:src="@drawable/pato1" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>